--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,30 @@
 version: 2
 jobs:
   build:
+
+    working_directory: ~/Rezeptbuch
+
     docker:
-      - image: circleci/<language>:<version TAG>
+      - image: circleci/openjdk:8-jdk-stretch
+
     steps:
+
       - checkout
-      - run: <command>
-  test:
-    docker:
-      - image: circleci/<language>:<version TAG>
-    steps:
-      - checkout
-      - run: <command>
-workflows:
-  version: 2
-  build_and_test:
-    jobs:
-      - build
-      - test
+
+      - restore_cache:
+          key: Rezeptbuch-{{ checksum "pom.xml" }}
+
+      - run: mvn dependency:go-offline
+
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: Rezeptbuch-{{ checksum "pom.xml" }}
+
+      - run: mvn package
+
+      - store_test_results:
+          path: target/surefire-reports
+
+      - store_artifacts:
+          path: target/demo-java-spring-0.0.1-SNAPSHOT.jar
