--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,17 @@
-version: 2
+version: 2.1
+orbs:
+  node: circleci/node@1.1.6
 jobs:
-  build:
-
-    working_directory: ~/Rezeptbuch
-
-    docker:
-      - image: circleci/openjdk:8-jdk-stretch
-
+  build-and-test:
+    executor:
+      name: node/default
     steps:
-
       - checkout
-
-      - restore_cache:
-          key: Rezeptbuch-{{ checksum "pom.xml" }}
-
-      - run: mvn dependency:go-offline
-
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: Rezeptbuch-{{ checksum "pom.xml" }}
-
-      - run: mvn package
-
-      - store_test_results:
-          path: target/surefire-reports
-
-      - store_artifacts:
-          path: target/demo-java-spring-0.0.1-SNAPSHOT.jar
+      - node/with-cache:
+          steps:
+            - run: npm install
+            - run: npm test
+workflows:
+    build-and-test:
+      jobs:
+        - build-and-test
